<resources>

    <string name="app_name">AlaaTV</string>

    //navigation button
    <string name="title_home">خانه</string>
    <string name="title_Products">محصولات</string>
    <string name="title_forum">انجمن</string>
    <string name="title_myDashboard">داشبورد من</string>

    //Home Page
    <string name="more">بیشتر</string>


    //profile info
    <string name="proName">نام و نام خانوادگی </string>
    <string name="proPhone">تلفن</string>
    <string name="proMail">پست الکترونیکی</string>
    <string name="profileGender">جنسیت</string>
    <string name="ProMajor">رشته تحصیلی</string>
    <string name="ProAddress">آدرس</string>
    <string name="proPostalCode">کدپستی</string>
    <string name="profileRegisterDate">تاریخ عضویت</string>
    <string name="profileCity">شهر</string>
    <string name="profileProvince">استان</string>
    <string name="profileSchool">مدرسه</string>
    //demos
    <string name="userName">محمد جواد</string>
    <string name="demo_mobileNumber">09390091027</string>
    <string name="mobilePhoneNumber">شماره تلفن همراه</string>
    <string name="demo_personalNumber">0018868614</string>
    <string name="demo_userFullName">سید محمد جواد سادات حسینی </string>
    <string name="demo_MajorName">ریاضی و فیزیک</string>
    <string name="demo_gender">مرد</string>
    <string name="demo_email">JavadHosseini14@gmail.com</string>
    <string name="demo_postCode">1456492310</string>
    <string name="demo_address">تهران - فردوس غرب - خیابان سازمان برنامه جنوبی - کوچه شهید محمد علی بهرامی نیا - پ 12</string>
    <string name="ProfileCompletionRate">میزان تکمیل پروفایل : </string>
    <string name="ProfileCompletionRateValue">60 %</string>
    <string name="completeProfile">تکمیل پروفایل</string>
    <string name="myVideos">فیلم ها و جزوه های من</string>
    <string name="registerRating">ثبت رتبه 98</string>
    <string name="demo_registerDate">97/12/4 </string>
    <string name="demo_city">تهران</string>
    <string name="demo_province">تهران</string>
    <string name="demo_school"> هدایت میزان</string>


    //video page
    <string name="description">همون طور که میدونید ما برای بچه های نظام قدیم کاری انجام نداده بودیم و این یه بار سنگینی رو دوش ما بود، البته بچه های نظام قدیم و نظام جدید که این کنکور رو بررسی میکنن خیلی از مباحثش به درد بچه های نظام جدید هم میخوره و صددرصد برای نظام قدیم مفیده، فقط در قسمت اول ممکنه بحث های مربوط به آینه ها حذف شده باشه، ما اونها رو نگفتیم ولی اگر طی خبرهای جدید نتیجه گیری شد که اونها هم باید گفته بشه، ما آخر برنامه براتون بحث آینه ها و عدسی ها رو هم بیان می کنیم، پس این موضوع نباید این طور تصور بشه که ما الان داریم کار رو انجام میدیم، فقط مخصوص بچه های نظام قدیم، بچه های نظام جدید هم از خیلی از این موضوعات که مشترک هست میتونن استفاده کافی ببرن، امیدوارم که لذت ببرید.</string>

    <string name="upNext">قسمت بعدی</string>
    <string name="previous">قسمت قبلی</string>
    <string name="Continue">ادامه</string>


    //login page
    <string name="describe01">خدمات نوین آموزش</string>
    <string name="describe02">مجری توسعه عدالت آموزشی</string>
    <string name="phone_number">شماره موبایل</string>
    <string name="personal_code">کد ملی</string>
    <string name="Login">ورود</string>
    <string name="GoToSignUp">تاکنون ثبت نام نکرده ام</string>
    <string name="GoToLogin">بازگشت به صفحه ورود</string>
    <string name="phoneHint">0912 3456789</string>
    <string name="personalHint">015 456789 0</string>

    //Sign Up
    <string name="SignUp">ثبت نام</string>
    <string name="signUp_Name">نام</string>
    <string name="signUp_LastName">نام خانوادگی</string>
    <string name="signUp_Email">پست الکترونیکی</string>
    <string name="gender">جنسیت : </string>
    <string name="EmailHint">Example@gmail.com</string>
    <string name="major">رشته تحصیلی</string>
    <string name="math">ریاضی</string>
    <string name="ensani">انسانی</string>
    <string name="tajrobi">تجربی</string>


    //cart
    <string name="cart">سبد خریدم   :)</string>


    //product page
    <string name="AddToCart">افزودن به سبد خرید</string>
    <string name="Add">افزودن</string>
    <string name="buy">خرید</string>
    <string name="features">ویژگی ها </string>
    <string name="konkoor">کنکور</string>
    <string name="Pr_Teacher">دبیر</string>
    <string name="nezam_old">نظام قدیم</string>
    <string name="nezam_new">کنکور نظام جدید</string>
    <string name="ChooseProduct">انتخاب محصول</string>
    <string name="studyProduct">بررسی</string>
    <string name="sampleBooklet">نمونه جزوه</string>
    <string name="introduction_video">کلیپ معرفی</string>
    <string name="Toman">تومان</string>
    <string name="finalPrice">قیمت نهایی </string>
    <string name="discount">(-) تخفیف </string>


    //Search Page
    <string name="SearchHint"> دنبال چی میگردی ؟ </string>

    //Tab layout
    <string name="tabLesson">دروس</string>
    <string name="tabProducts">محصولات</string>
    <string name="tabVideos">ویدئو</string>
    <string name="tabPamphlet">جزوه</string>
    <string name="tabArticle">مقاله</string>


    //Filter
    <string name="EducationSystem">نظام آموزشی</string>
    <string name="NewSystem">نظام جدید</string>
    <string name="OldSystem">نظام قدیم</string>

    <string name="Grade">مقطع</string>
    <string name="GradeNew10th">دهم</string>
    <string name="GradeNew11th">یازدهم</string>
    <string name="GradeNew12th">دوازدهم</string>
    <string name="GradeKonkur">کنکور</string>
    <string name="GradeOlympiad">المپیاد</string>
    <string name="GradeOld1">اول دبیرستان</string>
    <string name="GradeOld2">دوم دبیرستان</string>
    <string name="GradeOld3">سوم دبیرستان</string>
    <string name="GradeOld4">چهارم دبیرستان</string>
    <string name="GradeAll">همه مقاطع</string>

    <string name="Major">رشته</string>
    <string name="Major_Riazi">ریاضی</string>
    <string name="Major_Tajrobi">تجربی</string>
    <string name="Major_Ensani">انسانی</string>
    <string name="MajorAll">همه رشته ها</string>

    <string name="Lesson">درس</string>
    <string name="teacher">دبیر</string>
    <string name="ApplyFilter">اعمال</string>


    //others
    <string name="BracketLeft"> ( </string>
    <string name="BracketRight"> ) </string>


    <string name="demoTitle">همه دین و زندگی نظام قدیم</string>
    <string name="demoTitle1">همایش های طلایی ریاضی تحربی نظام قدیم</string>
    <string name="demoTitle2">همایش های 5+1 ریاضی تجربی نظام قدیم</string>
    <string name="demoSample">نمونه جزوه همایش طلایی ریاضی تجربی نظام قدیم اقای امینی</string>
    <string name="demoSubTitle11">همایش های طلایی ریاضی تجربی کنکور آقای امینی راد</string>
    <string name="demoText1"> مدرس: وحیده کاغذی
در این جمع بندی درس به درس ، نکات مهم و کلیدی سه کتاب کنکور 97 یعنی دوم، سوم و چهارم(پیش) مطرح می شود. از آنجایی که عمده تست ها را آیات و احایث تشکیل می دهند تاکید بر این موارد بیشتر انجام خواهد شد. بعد از بیان نکات مهم و کلیدی هر درس، تست های پر چالش از کنکور سراسری همراه با تحلیلی کامل و جذاب ارائه می گردد.
عناوین فیلم ها:
درس اول تا شانزدهم دین و زندگی(2)
درس اول تا شانزدهم دین و زندگی(3)
درس اول تا دهم دین و زندگی(۴)
جزوه:
دانلود جزوه دینی 2
دانلود جزوه دینی 3
دانلود جزوه دینی 4 </string>
    <string name="product_image">Product image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="titleProductItem">همایش طلایی ریاضی تجربی نظام قدیم کنکور  98</string>
    <string name="discountPercent">تخفیف 40 %</string>
    <string name="delete">حذف</string>
    <string name="attr_sample">زمان دریافت</string>
    <string name="tx_attr_value_sample">از لحظه خرید</string>
    <string name="colon">:</string>
    <string name="details">جزییات</string>
    <string name="totalCost">جمع کل خرید </string>
    <string name="completeYourPurchase">خرید خود را نهایی کنید</string>
    <string name="discountCode">کد تخفیف دارم</string>
    <string name="discountHint">مثال : codetakhfif</string>
    <string name="applyDiscount">ثبت تخفیف</string>
    <string name="wallet_uses">استفاده از کیف پول </string>
    <string name="helpForAlaa">به آلاء کمک</string>
    <string name="alaaHelpAmount">5,000 تومان</string>
    <string name="IdoNotDonate">نمی کنم</string>
    <string name="IdoDonate">می کنم</string>
    <string name="purchase">پرداخت و تکمیل خرید</string>
    <string name="realPriceDemo">654,598 تومان</string>
    <string name="salePriceDemo">654,598 تومان</string>
    <string name="discountCost">4,598 تومان</string>
    <string name="walletPriceDemo">30,000 تومان</string>
    <string name="tx_bon">1+ آلاء بٌن</string>
    <string name="sample_videos">نمونه فیلم ها</string>
    <string name="demo_title_sample_video">تحلیل نمونه تست های مبحث انتگرال</string>
    <string name="demo_teacherName">مهدی صنیعی طهرانی</string>
    <string name="samples">نمونه ها</string>
    <string name="banner_product"> جمع بندی 80 درصد کنکور</string>
    <string name="video">فیلم</string>
    <string name="booklet">جزوه</string>
    <string name="demo_title_videoPage"> فیلم جلسه 91 - فصل اول شیمی (3) ، واکنش های شیمیایی و استوکیومتری (فصل هفتم) </string>
    <string name="demo_set_title">شیمی صفر تا صد کنکور نظام قدیم (97-1396) مهدی صنیعی طهرانی</string>
    <string name="countinue">ادامه ...</string>
    <string name="close">بستن</string>
    <string name="demo_title_block">کنکور نظام قدیم</string>
    <string name="downloadFormHere">از اینجا دانلود کن</string>
    <string name="quality_high">دانلود با کیفیت عالی</string>
    <string name="download">دانلود</string>
    <string name="quality_good">دانلود با کیفیت خوب</string>
    <string name="quality_medium">دانلود با کیفیت متوسط</string>
    <string name="downloadSize">حجم فایل :</string>
    <string name="demo_goodSize">140 MB</string>
    <string name="demo_mediumSize">75 MB</string>
    <string name="demo_highSize">250 MB</string>
    <string name="ChiBekhonm">تحلیل کتاب از سایت چی بخونم</string>
    <string name="RelatedProduct">محصولات مرتبط</string>
    <string name="demo_title_chiBekhonm">ریاضیات تجربی جامع تست خیلی سبز (جلد اول)</string>
    <string name="schoolHint">مثلا : صنعتی شریف</string>
    <string name="lastNameHint">مثلا : شهلائی</string>
    <string name="nameHint">مثلا : سجاد</string>
    <string name="booklets">جزوات</string>
    <string name="videos">فیلم ها</string>
    <string name="doDownload">دانلود کن</string>
    <string name="watch">تماشا کن</string>
    <string name="enterAuthMSG">لطفا کد تایید ارسال شده را وارد نمایید</string>
    <string name="ConfirmCode">تایید کد</string>
    <string name="cost">قیمت</string>
    <string name="productPrice">قیمت محصول</string>
    <string name="totalPrice">قیمت کل</string>
    <string name="display">مشاهده</string>


</resources>
