<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.example.alaa.customViews.InfoCard
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            app:icon="@drawable/ic_genders_colored"
            app:title="@string/preGender"
            app:value="@string/demo_gender" />


        <com.example.alaa.customViews.InfoCard
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            app:icon="@drawable/ic_books_colord"
            app:title="@string/major"
            app:value="@string/demo_MajorName" />


        <com.example.alaa.customViews.InfoCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            app:icon="@drawable/ic_email_colored"
            app:title="@string/proMail"
            app:value="@string/demo_email" />

        <com.example.alaa.customViews.InfoCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            app:icon="@drawable/ic_postalcode_colored"
            app:title="@string/proPostalCode"
            app:value="@string/demo_postCode" />

        <com.example.alaa.customViews.InfoCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            app:icon="@drawable/ic_home_location"
            app:title="@string/ProAddress"
            app:value="@string/demo_address" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>