<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".views.ui.login.SignUpFragment"
    android:animateLayoutChanges="true">

<data>
    <variable
        name="authViewModel"
        type="com.example.alaa.views.ui.login.AuthViewModel" />

</data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/backgroundtoolbar"
            android:gravity="center_horizontal"
            android:orientation="vertical">


        </LinearLayout>

        <androidx.cardview.widget.CardView

            android:id="@+id/card_signUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/cardLoginMargin"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/cardLoginMargin"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:visibility="visible"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/card_dimen">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.5"
                    android:fadeScrollbars="true"
                    android:fadingEdge="vertical"
                    android:fadingEdgeLength="130dp"
                    android:requiresFadingEdge="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/img_profile_Boy_signUp"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="top"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:onClickListener="@{() -> authViewModel.onGenderSelected(true)}"
                                app:srcCompat="@drawable/ic_profile_boy_black" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/img_profile_Girl_signUp"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="top"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:onClickListener="@{() -> authViewModel.onGenderSelected(false)}"
                                app:srcCompat="@drawable/ic_girl_profile_black" />

                            <com.example.alaa.customViews.TextViewWithFont
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginEnd="10dp"
                                android:layout_weight="0.7"
                                android:text="@string/gender"
                                android:textColor="@color/alaa5"
                                android:textSize="14sp"
                                app:MyTextViewFont="IRANSans_Bold" />
                        </LinearLayout>




                            <com.example.alaa.customViews.InfoForm
                                android:id="@+id/infoForm_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:hint_infoForm="@string/nameHint"
                                app:icon_infoForm="@drawable/ic_name_signup_colored"
                                app:editText_inputType="textPersonName"
                                app:title_infoForm="@string/signUp_Name" />


                            <com.example.alaa.customViews.InfoForm
                                android:id="@+id/infoForm_LastName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:hint_infoForm="@string/lastNameHint"
                                app:icon_infoForm="@drawable/ic_lastname_signup_colored"
                                app:editText_inputType="textPersonName"
                                app:title_infoForm="@string/signUp_LastName" />

                            <com.example.alaa.customViews.InfoForm
                                android:id="@+id/infoForm_phoneNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:hint_infoForm="@string/phoneHint"
                                app:icon_infoForm="@drawable/ic_mobile_color"
                                app:editText_maxLine="11"
                                app:editText_inputType="phone"
                                app:title_infoForm="@string/mobilePhoneNumber" />


                            <com.example.alaa.customViews.InfoForm
                                android:id="@+id/infoForm_personalNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:hint_infoForm="@string/personalHint"
                                app:icon_infoForm="@drawable/ic_personal_code_colored"
                                app:editText_maxLine="10"
                                app:editText_inputType="phone"
                                app:title_infoForm="@string/personal_code" />

                            <com.example.alaa.customViews.InfoForm
                                android:id="@+id/infoForm_school"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:hint_infoForm="@string/schoolHint"
                                app:icon_infoForm="@drawable/ic_school"
                                app:editText_inputType="text"
                                app:title_infoForm="@string/profileSchool" />

                            <com.example.alaa.customViews.InfoForm
                                android:id="@+id/infoForm_mail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:hint_infoForm="@string/EmailHint"
                                app:icon_infoForm="@drawable/ic_email_colored"
                                app:editText_inputType="textEmailAddress"
                                app:title_infoForm="@string/proMail" />

                            <com.example.alaa.customViews.InfoForm
                                android:id="@+id/infoForm_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:icon_infoForm="@drawable/ic_home_location"
                                app:editText_inputType="text"
                                app:title_infoForm="@string/ProAddress" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="10dp"
                                android:gravity="end"
                                android:orientation="horizontal">

                                <com.example.alaa.customViews.TextViewWithFont
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="top"
                                    android:layout_marginEnd="5dp"
                                    android:text="@string/major"
                                    android:textColor="@color/alaa5"
                                    android:textSize="14sp"
                                    app:MyTextViewFont="IRANSans_Bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="10dp"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <com.google.android.material.chip.ChipGroup
                                    android:id="@+id/chip_group_major"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:chipSpacingHorizontal="15dp"
                                    app:singleLine="true"
                                    app:singleSelection="true">


                                    <com.google.android.material.chip.Chip
                                        android:id="@+id/chip_ensani"
                                        style="@style/Widget.MaterialComponents.Chip.Choice"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:checkable="true"
                                        android:onCheckedChanged="@{authViewModel::onCheckedChangeListener}"
                                        android:text="@string/ensani"
                                        app:checkedIcon="@drawable/ic_done"
                                        app:checkedIconEnabled="true"
                                        app:chipCornerRadius="@dimen/chipRadius"
                                        app:rippleColor="@color/alaa0" />

                                    <com.google.android.material.chip.Chip
                                        android:id="@+id/chip_tajrobi"
                                        style="@style/Widget.MaterialComponents.Chip.Choice"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:checkable="true"
                                        android:onCheckedChanged="@{authViewModel::onCheckedChangeListener}"
                                        android:text="@string/tajrobi"
                                        app:checkedIcon="@drawable/ic_done"
                                        app:checkedIconEnabled="true"
                                        app:chipCornerRadius="@dimen/chipRadius"
                                        app:rippleColor="@color/alaa0" />

                                    <com.google.android.material.chip.Chip
                                        android:id="@+id/chip_math"
                                        style="@style/Widget.MaterialComponents.Chip.Choice"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:checkable="true"
                                        android:onCheckedChanged="@{authViewModel::onCheckedChangeListener}"
                                        android:text="@string/math"
                                        app:checkedIcon="@drawable/ic_done"
                                        app:checkedIconEnabled="true"
                                        app:chipCornerRadius="@dimen/chipRadius"
                                        app:rippleColor="@color/alaa0" />

                                </com.google.android.material.chip.ChipGroup>


                            </LinearLayout>

                    </LinearLayout>

                </ScrollView>


                <com.example.alaa.customViews.ButtonWithFont
                    android:id="@+id/btn_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.2"
                    android:enabled="true"
                    android:gravity="center"
                    android:text="@string/SignUp"
                    app:MyButtonFont="IRANSans_Medium"
                    android:visibility="visible" />

                <com.example.alaa.customViews.ButtonWithFont
                    android:id="@+id/btn_GoToLoginCard"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    app:MyButtonFont="IRANSans_Light"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/GoToLogin"
                    android:visibility="visible"
                    android:onClickListener="@{() -> authViewModel.select(0)}"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>