<?xml version="1.0" encoding="utf-8"?>

<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/Margin10"
    android:layout_marginTop="@dimen/Margin5"
    android:layoutDirection="rtl"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_nav_filter_educationSystem"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Margin10"
            android:enabled="true"
            android:layoutDirection="ltr"
            android:text="@string/EducationSystem"
            android:textColor="@color/pureWhite"
            app:backgroundTint="@color/purple"
            app:icon="@drawable/ic_chevron_left_black_24dp"
            app:iconTint="@color/pureWhite" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_nav_filter_grade"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Margin10"
            android:layoutDirection="ltr"
            android:text="@string/Grade"
            android:textColor="@color/blackTitle"
            app:backgroundTint="@color/pureWhite"
            app:icon="@drawable/ic_chevron_left_black_24dp"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_nav_filter_major"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Margin10"
            android:layoutDirection="ltr"
            android:text="@string/major"
            android:textColor="@color/blackTitle"
            app:backgroundTint="@color/pureWhite"
            app:icon="@drawable/ic_chevron_left_black_24dp"
            app:iconTint="@color/black" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_nav_filter_lesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Margin10"
            android:enabled="false"
            android:layoutDirection="ltr"
            android:text="@string/Lesson"

            app:icon="@drawable/ic_chevron_left_black_24dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_nav_filter_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Margin10"
            android:enabled="false"
            android:layoutDirection="ltr"
            android:text="@string/teacher"
            app:icon="@drawable/ic_chevron_left_black_24dp" />

    </LinearLayout>

</HorizontalScrollView>




